--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,7 @@
 {% include boot.html %}
 <!-- 引入博文顶部样式 -->
 {% include post-title.html %}
+{% include toc.html %}
 <div class="markdown-body fadeInUp animated">
 
   <!-- {% if page.subtitle %}
@@ -66,5 +67,6 @@
     }
 </script>
 <script src="/assets/js/main.js"></script>
+<script src="/assets/js/toc.js"></script>
 </body>
 </html>
