--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -51,7 +51,7 @@
 .toc-content .toggle-btn {
   position: absolute;
   left: -15px;
-  top: 2px;
+  /* top: 2px; */
   width: 12px;
   height: 12px;
   cursor: pointer;
@@ -82,6 +82,19 @@
 .toc-content .toc-active {
   color: #9A85FF;
   font-weight: bold;
+}
+
+.toc-content .dot-btn {
+  position: absolute;
+  left: -15px;
+  top: 8px;
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  margin-right: 8px;
+  margin-bottom: 8px;
+  background-color: #666;
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 1200px) {
